[tool.poetry]
name = "stock-buyer"
version = "0.1.0"
description = ""
authors = ["seriaati <seria.ati@gmail.com>"]
license = "GPL v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
line-py = {git = "https://github.com/seriaati/line.py"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.20.0"}
shioaji = {extras = ["speed"], version = "^1.1.13"}
stock-crawl = {git = "https://github.com/seriaati/stock_crawl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
